# PersonalAssistant

./: .gitignore  CMakeLists.txt  README.md  STT_TESTING.cpp  main.cpp
modules/core/: STT.cpp  STT.h  audioIO.cpp  audioIO.h  commandHandler.cpp  commandHandler.h
modules/core/whisper/: README_WHISPER.txt
